--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript alapok</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    
 </head>
 
 <body>
@@ -22,7 +22,7 @@
             <p>
                 Írj JavaScript kódot, amely kiírja a konzolra az ehhez a
                 bekezdéshez tartozó címben lévő szöveget! (azaz az első
-                section h2-tagjében lévő szövget).
+                section h2-tagjében lévő szöveget).
             </p>
             <p><span>Segítség a megoldáshoz:</span></p>
             <ul>
@@ -159,7 +159,6 @@
                         href="https://www.w3schools.com/jsref/dom_obj_event.asp">HTML DOM events</a>
                 </li>
             </ul>
-
             <div class="kattintasutan"></div>
         </section>
         <section>
@@ -263,6 +262,7 @@
             <div class="sajatdivem"></div>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
